# oompah

./: .env.example  .gitattributes  .gitignore  .oompah-promote-split-instruction.txt  .pre-commit-config.yaml  AGENTS.md  LICENSE  Makefile  README.md  REBASE_NOTES.md  WORKFLOW.md  ebgm9bi2nivbpcmko2nqne1pslfbqmad.darc  gicirpda5ojbi6jtdjl1evohhpjp9tcm.darc  manifest  moavgqmc9ra6fforksk1enk1mcucbnbc.darc  ofd5dcmhdqloln4tmkv4irctgojlt4rn  olosmikfs0h5di7ftcauaqehkcd9jvuv.darc  oompah-v1r.py  patch_server.py  push-with-project-pat.sh  pyproject.toml  umpah-b6d
.beads/: config.yaml  interactions.jsonl  issues.jsonl  issues.jsonl.backup-20260516T123958  metadata.json
.beads/backup/: backup_state.json  comments.jsonl  config.jsonl  dependencies.jsonl  events.jsonl  issues.jsonl  labels.jsonl
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci-dedicated.yml  ci.yml  cli-release.yml
.oompah-no-hooks/: prepare-commit-msg
.oompah/tasks/: external-imports.yml
backlog/: config.yml
backlog/completed/: task-1 - Project-setup-pyproject.toml-and-package-structure.md  task-10 - Kanban-board-with-drag-drop-and-inline-editing.md  task-100 - Replace-polling-with-event-driven-calls.md  task-101 - backend-api_agent-ApiAgentSession.run_task-failed-The-read-operation-timed-out.md  task-102 - backend-api_agent-ApiAgentSession.run_task-failed-HTTP-429-from-https-inference-.md  task-103 - backend-api_agent-ApiAgentSession.run_task-failed-HTTP-429-from-https-inference-.md  task-104 - backend-api_agent-ApiAgentSession.run_task-failed-HTTP-429-from-https-inference-.md  task-105 - backend-api_agent-ApiAgentSession.run_task-failed-HTTP-429-from-https-inference-.md  task-106 - backend-api_agent-ApiAgentSession.run_task-failed-HTTP-429-from-https-inference-.md  task-107 - Make-the-agent-details-pane-easier-to-read.md  task-108 - Make-the-orchestrator-fully-event-driven.md  task-109 - Implement-tracker-change-detection.md  task-11 - test-backlog.md  task-110 - Split-the-monolithic-_tick.md  task-111 - Replace-the-poll-loop-with-an-event-driven-dispatch-loop.md  task-112 - Add-forge-webhook-receiver-or-conditional-request-optimization.md  (+368 more)
docs/: README.md  agent-profiles.md  backlog-migration.md  cli-api-surface.md  cli-install.md  cli-release.md  cutover-workflow.md  github-issue-intake.md  gitlab-issue-intake.md  managed-project-onboarding.md  merge-queue-runbook.md  multi-provider-roles.md  multimodal-attachments.md  native-markdown-tracker.md  operator-runbook.md  polling-mechanisms.md  project-bootstrap.md  prompt-injection-security.md  release-addendums.md  repository-map.md  self-hosted-runner.md  skills-plugin-pattern.md  state-branch-migration-readiness.md  state-branch-migration.md  submit-queue.md  task-epic-workflow.md  tick-latency-diagnostics.md  webhook-forwarding.md
oompah/: __init__.py  __main__.py  acp_agent.py  acp_tools.py  admin_cli.py  agent.py  agent_instructions.py  agent_profile_store.py  api_agent.py  attachments.py  authority_boundary.py  backlog_compat.py  backlog_conflict.py  backlog_webhooks.py  beads_to_backlog.py  bootstrap.py  cache.py  checkpoint_queue.py  cherry_pick_pr_creator.py  churn_magnet.py  close_audit.py  close_gate.py  completion_verifier.py  config.py  conflict_impact_predictor.py  console.py  console_format.py  console_legacy.py  console_store.py  dolt_sync.py  epic_proposal.py  epic_staleness.py  error_watcher.py  events.py  focus.py  github_intake_bridge.py  github_tracker.py  gitlab_tracker.py  heuristic_telemetry.py  intake_actions.py  (+67 more)
plans/: README.md  acp-agent.md  acp-backends.md  agent-watcher.md  agentic-focus-triage.md  backlog-task-change-webhooks.md  cli-packaging-boundary.md  codex-sdk-pin.md  comment-delivery.md  completion-verifier.md  concurrent-git-tracker-writes.md  console.md  dolt-sync-watchdog.md  focus-handoff-mutation-protocol.md  github-issues-tracker-migration.md  gitlab-forge-parity.md  granian-benchmark-results.md  intake-readiness-schema.md  mcp-openapi-exposure-policy.md  multi-branch-support.md  multi-provider-role-dispatch.md  multimodal-attachments.md  oompah-1.0-release.md  opencode-acp-backend.md  orchestrator-process-split.md  per-focus-models.md  polling-mechanisms.md  prompt-injection-protection.md  release-branch-addendums.md  release-delivery-commit-inventory.md  release-pick-schema.md  repo-map-artifact.md  request-latency-profiling.md  service-split.md  skills-plugin-pattern.md  state-branch-design.md  submit-queue.md  tracker-backends.md
scripts/: apply_rdi_overlay.py  beads-merge.sh  bench_server.py  branch-cleanup.sh  check-secrets.sh  merge-queue-cutover.sh  render_cli_release_notes.py  runner.sh  smoke_codex_sdk.py  smoke_cutover.py
tests/: conftest.py  test_acp_agent.py  test_acp_backends.py  test_acp_billing.py  test_acp_billing_ui.py  test_acp_codex_backend.py  test_acp_forge_fields.py  test_acp_opencode_backend.py  test_acp_opencode_integration.py  test_acp_profile_ui.py  test_acp_profile_validation.py  test_acp_project_tools.py  test_activity_panel_collapsible.py  test_activity_panel_verbose_toggle.py  test_add_release_picks_modal.py  test_agent_instructions.py  test_agent_log_paths.py  test_agent_log_provider_model.py  test_agent_profile_api.py  test_agent_profile_store.py  test_agent_profiles_ui.py  test_api_agent_budget.py  test_api_agent_profiles.py  test_ask_question.py  test_asking_questions.py  test_attachments.py  test_authority_boundary.py  test_auto_concurrency.py  test_backlog_compat.py  test_backlog_conflict.py  test_backlog_hook_tracker_guards.py  test_backlog_tracker.py  test_backlog_tracker_guards.py  test_backlog_webhooks.py  test_beads_merge_driver.py  test_beads_to_backlog.py  test_bench_server.py  test_budget_free_tier_dispatch.py  test_candidate_preflight.py  test_candidate_selector.py  (+286 more)
umpah/: __init__.py  __main__.py  agent.py  api_agent.py  config.py  models.py  orchestrator.py  prompt.py  providers.py  server.py  tracker.py  workspace.py
(+2213 files in other folders)
