[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oompah"
version = "0.1.0"
description = "An automation service that orchestrates coding agents to execute project work sourced from issue trackers"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "watchfiles>=1.0",
    "python-liquid>=1.12",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    # Claude Agent SDK: drives the bundled `claude` CLI as a subprocess so
    # ACP-mode dispatches are billed against the operator's Pro/Max
    # subscription rather than the per-token API meter. See
    # docs/acp-agent.md and bead oompah-zlz_2-bcl.
    "claude-agent-sdk>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
oompah = "oompah.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["oompah"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
