[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oompah"
version = "0.1.0"
description = "An automation service that orchestrates coding agents to execute project work sourced from issue trackers"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "watchfiles>=1.0",
    "python-liquid>=1.12",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
# Claude ACP backend: drives the bundled `claude` CLI via the Claude Agent
# SDK so ACP-mode dispatches bill against the operator's Pro/Max
# subscription rather than the per-token API meter.
# See docs/acp-agent.md and bead oompah-zlz_2-bcl.
claude = [
    "claude-agent-sdk>=0.1.0",
]
# Codex ACP backend: drives OpenAI's Codex CLI via the openai-agents SDK.
# Pin verified against the TResponseInputItem union shape; see
# tests/test_codex_sdk_shape_smoke.py and bead oompah-zlz_2-jrkz.1.
codex = [
    "openai-agents>=0.17.2,<0.18",
]
# Install both ACP backends at once.
all = [
    "oompah[claude]",
    "oompah[codex]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    # ACP backends: installed in CI so tests that import claude_agent_sdk
    # or openai_agents (via oompah.acp_tools / oompah.acp_backends.claude)
    # can run.  See bead oompah-zlz_2-bqkz.
    "claude-agent-sdk>=0.1.0",
    "openai-agents>=0.17.2,<0.18",
]

[project.scripts]
oompah = "oompah.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["oompah"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
