[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oompah"
version = "0.1.0"
description = "An automation service that orchestrates coding agents to execute project work sourced from issue trackers"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
# Server runtime: install this extra when running the oompah orchestration
# service. The base package remains a lightweight GitHub-installable task CLI.
server = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "watchfiles>=1.0",
    "python-liquid>=1.12",
    "PyJWT[crypto]>=2.8",
    "python-multipart>=0.0.9",
    # Repository-map indexer: Tree-sitter Python bindings plus packaged
    # grammars for Python, Rust, TypeScript, JavaScript, YAML, and Markdown.
    # See oompah/repo_indexer.py (OOMPAH-295).
    "tree-sitter>=0.26",
    "tree-sitter-python>=0.25",
    "tree-sitter-rust>=0.24",
    "tree-sitter-javascript>=0.25",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-yaml>=0.7",
    "tree-sitter-markdown>=0.5",
]

# Claude ACP backend: drives the bundled `claude` CLI via the Claude Agent
# SDK so ACP-mode dispatches bill against the operator's Pro/Max
# subscription rather than the per-token API meter.
# See docs/acp-agent.md.
claude = [
    "claude-agent-sdk>=0.1.0",
]
# Codex ACP backend: drives OpenAI's Codex CLI via the openai-agents SDK.
# Pin verified against the TResponseInputItem union shape; see
# tests/test_codex_sdk_shape_smoke.py.
codex = [
    "openai-agents>=0.17.2,<0.18",
]
# Granian ASGI server: opt-in replacement for uvicorn (--server granian).
# Granian is a Rust/Tokio ASGI server with ~+23% HTTP throughput vs uvicorn
# in single-worker mode.  Must be installed to use `oompah server --server granian`
# or `make run-granian`.
granian = [
    "granian>=1.0",
]
# Install both ACP backends at once.
all = [
    "oompah[server]",
    "oompah[claude]",
    "oompah[codex]",
    "oompah[granian]",
]
dev = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "watchfiles>=1.0",
    "python-liquid>=1.12",
    "PyJWT[crypto]>=2.8",
    "python-multipart>=0.0.9",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    # ACP backends: installed in CI so tests that import claude_agent_sdk
    # or openai_agents (via oompah.acp_tools / oompah.acp_backends.claude)
    # can run.
    "claude-agent-sdk>=0.1.0",
    "openai-agents>=0.17.2,<0.18",
    # Granian: included so the granian import guard tests can run.
    "granian>=1.0",
    # Tree-sitter grammars for repo_indexer tests (OOMPAH-295).
    "tree-sitter>=0.26",
    "tree-sitter-python>=0.25",
    "tree-sitter-rust>=0.24",
    "tree-sitter-javascript>=0.25",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-yaml>=0.7",
    "tree-sitter-markdown>=0.5",
]

[project.scripts]
oompah = "oompah.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["oompah"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
